--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Static#index</h1>
-<p>Find me in app/views/static/index.html.erb</p>
+<div class='row'>
+    Logo & Quote
+</div>
+
+<div class='row'>
+    Main
+</div>
+
+<div class='row'>
+    Portfolio
+</div>
