Bootstarp: Set up Main area layout

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,11 +1,27 @@
-<div class='row'>
+<div class='row' id='brand'>
     Logo & Quote
 </div>
 
-<div class='row'>
-    Main
+<div class='row' id='main'>
+    <div class="col">
+        About Trai
+    </div>
+
+    <div class="col">
+        Moxie
+    </div>
+
+    <div class="w-100"></div>
+
+    <div class="col">
+        Contact
+    </div>
+
+    <div class="col">
+        Bulletine Board
+    </div>
 </div>
 
-<div class='row'>
+<div class='row' id='portfolio'>
     Portfolio
 </div>
