Bootstrap: Set up general layout of Portfolio area

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -3,25 +3,31 @@
 </div>
 
 <div class='row' id='main'>
-    <div class="col">
+    <div class="col-lg">
         About Trai
     </div>
 
-    <div class="col">
+    <div class="col-lg">
         Moxie
     </div>
 
     <div class="w-100"></div>
 
-    <div class="col">
+    <div class="col-lg">
         Contact
     </div>
 
-    <div class="col">
+    <div class="col-lg">
         Bulletine Board
     </div>
 </div>
 
 <div class='row' id='portfolio'>
-    Portfolio
+    <div class="col-lg-8">
+        Featured Project
+    </div>
+
+    <div class="col-lg-4">
+        Post Categories
+    </div>
 </div>
