Bootstrap: Added basic image overlay card components for main area

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,24 +1,50 @@
 <div class='row' id='brand'>
-    Logo & Quote
+    <div class="col-lg-8">
+        Logo
+    </div>
+
+    <div class="col-lg-">
+        Quote
+    </div>
 </div>
 
 <div class='row' id='main'>
     <div class="col-lg">
-        About Trai
+        <div class="card bg-dark text-white">
+            <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
+            <div class="card-img-overlay">
+                <h5 class="card-title">About Trai</h5>
+            </div>
+        </div>
     </div>
 
     <div class="col-lg">
-        Moxie
+        <div class="card bg-dark text-white">
+            <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
+            <div class="card-img-overlay">
+                <h5 class="card-title">This Girls Got Moxie</h5>
+            </div>
+        </div>
     </div>
 
     <div class="w-100"></div>
 
     <div class="col-lg">
-        Contact
+        <div class="card bg-dark text-white">
+            <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
+            <div class="card-img-overlay">
+                <h5 class="card-title">Drop a Line</h5>
+            </div>
+        </div>
     </div>
 
     <div class="col-lg">
-        Bulletine Board
+        <div class="card bg-dark text-white">
+            <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
+            <div class="card-img-overlay">
+                <h5 class="card-title">Bulletine Board</h5>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -27,7 +53,7 @@
         Featured Project
     </div>
 
-    <div class="col-lg-4">
+    <div class="col-lg-">
         Post Categories
     </div>
 </div>
