--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,59 +1,142 @@
-<div class='row' id='brand'>
-    <div class="col-lg-8">
-        Logo
-    </div>
-
-    <div class="col-lg-">
-        Quote
-    </div>
-</div>
-
-<div class='row' id='main'>
-    <div class="col-lg">
-        <div class="card bg-dark text-white">
-            <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
-            <div class="card-img-overlay">
-                <h5 class="card-title">About Trai</h5>
-            </div>
+<div class='jumbotron'>
+    <div class='row' id='brand'>
+        <div class="col-lg-8">
+            Logo
         </div>
-    </div>
 
-    <div class="col-lg">
-        <div class="card bg-dark text-white">
-            <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
-            <div class="card-img-overlay">
-                <h5 class="card-title">This Girls Got Moxie</h5>
-            </div>
-        </div>
-    </div>
-
-    <div class="w-100"></div>
-
-    <div class="col-lg">
-        <div class="card bg-dark text-white">
-            <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
-            <div class="card-img-overlay">
-                <h5 class="card-title">Drop a Line</h5>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-lg">
-        <div class="card bg-dark text-white">
-            <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
-            <div class="card-img-overlay">
-                <h5 class="card-title">Bulletine Board</h5>
-            </div>
+        <div class="col-lg-">
+            Quote
         </div>
     </div>
 </div>
 
-<div class='row' id='portfolio'>
-    <div class="col-lg-8">
-        Featured Project
+<div class="jumbotron">
+    <div class='row' id='main'>
+        <div class="col-lg">
+            <div class="card bg-dark text-white">
+                <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">About Trai</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg">
+            <div class="card bg-dark text-white">
+                <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">This Girls Got Moxie</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class="w-100"></div>
+
+        <div class="col-lg">
+            <div class="card bg-dark text-white">
+                <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Drop a Line</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg">
+            <div class="card bg-dark text-white">
+                <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Bulletine Board</h5>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="col-lg-">
-        Post Categories
+</div>
+
+<div class='jumbotron'>
+    <div class='row' id='portfolio'>
+        <div class="col-lg-8">
+            Featured Project
+        </div>
+
+        <div class="col-lg-4">
+            <div class="accordion" id="accordionExample">
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Ruby
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Ruby Posts
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                JavaScript
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div class="card-body">
+                            JavaScript Posts
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                SQL
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                        <div class="card-body">
+                            SQL Posts
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingFour">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                Projects
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Project Posts
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingFive">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                Blog
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Blog Posts
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
