--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,11 +1,12 @@
 <div class='jumbotron'>
     <div class='row' id='brand'>
         <div class="col-lg-8">
-            Logo
+            <h1>Trai Lynne</h1>
         </div>
 
-        <div class="col-lg-">
-            Quote
+        <div class="col-lg-4">
+            <p>"<%= Quote.find(rand(Quote.all.length).floor).phrase %>"</p>
+            <p>- <%= Quote.find(rand(Quote.all.length).floor).author %></p>
         </div>
     </div>
 </div>
@@ -16,7 +17,7 @@
             <div class="card bg-dark text-white">
                 <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
                 <div class="card-img-overlay">
-                    <h5 class="card-title">About Trai</h5>
+                    <h3 class="card-title">About Trai</h3>
                 </div>
             </div>
         </div>
@@ -25,7 +26,7 @@
             <div class="card bg-dark text-white">
                 <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
                 <div class="card-img-overlay">
-                    <h5 class="card-title">This Girls Got Moxie</h5>
+                    <h3 class="card-title">This Girls Got Moxie</h3>
                 </div>
             </div>
         </div>
@@ -36,7 +37,7 @@
             <div class="card bg-dark text-white">
                 <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
                 <div class="card-img-overlay">
-                    <h5 class="card-title">Drop a Line</h5>
+                    <h3 class="card-title">Drop a Line</h3>
                 </div>
             </div>
         </div>
@@ -45,7 +46,7 @@
             <div class="card bg-dark text-white">
                 <img class="card-img" src="http://trailynne.org/img/hero.jpg" alt="Card image">
                 <div class="card-img-overlay">
-                    <h5 class="card-title">Bulletine Board</h5>
+                    <h3 class="card-title">Bulletine Board</h3>
                 </div>
             </div>
         </div>
@@ -56,10 +57,11 @@
 <div class='jumbotron'>
     <div class='row' id='portfolio'>
         <div class="col-lg-8">
-            Featured Project
+            <h2>Featured Projects</h2>
         </div>
 
         <div class="col-lg-4">
+        <h2>Categories</h2>
             <div class="accordion" id="accordionExample">
                 <div class="card">
                     <div class="card-header" id="headingOne">
