Bootstrap: Added Basic components to static pages

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,1 +1,11 @@
-About Trai Lynne
+<div class='jumbotron'>
+    <div class='row'>
+        <div class='col-sm-4'>
+            picture
+        </div>
+
+        <div class='col-sm-4'>
+            <h1>About Trai Lynne</h1>
+        </div>
+    </div>
+</div>
