--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,1 +1,11 @@
-Contact
+<div class='jumbotron'>
+    <div class='row'>
+        <div class='col-sm-8'>
+            <h1>Contact</h1>
+        </div>
+
+        <div class='col-sm-4'>
+            picture
+        </div>
+    </div>
+</div>
